# wikis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PARITY_AUDIT.md  PLANNING_GRAPH_QUALITY_ROADMAP.md  PLANNING_ORPHAN_RESOLUTION_V2.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.postgres.yml  docker-compose.yml  install.sh  package.json
backend/: Dockerfile  openapi.json  pyproject.toml
backend/app/: auth.py  config.py  db.py  dependencies.py  events.py  main.py
backend/app/api/: routes.py
backend/app/core/: artifact_export.py  ask_engine.py  ask_prompts.py  ask_tool.py  bm25_disk.py  chat_utils.py  cluster_constants.py  cluster_expansion.py  cluster_stability.py  cluster_utils.py  code_splitter.py  confidence_filter.py  constants.py  content_expander.py  diagram_sanitizer.py  docstore.py  document_compressor.py  document_ranker.py  feature_flags.py  federated_retriever.py  filesystem_indexer.py  filter_manager.py  github_client.py  graph_clustering.py  graph_lexical_v2.py  graph_manager.py  graph_orphan_cascade_v2.py  graph_orphan_hybrid.py  graph_topology.py  graph_topology_diagnostics.py  hybrid_wiki_toolkit_wrapper.py  local_repo_provider.py  local_repository_manager.py  multi_retriever.py  project_lifecycle.py  project_search_engine.py  registry_manager.py  repo_resolution.py  repository_analysis_store.py  retrievers.py  (+13 more)
backend/app/models/: __init__.py  api.py  db_models.py  events.py  invocation.py  qa_api.py  search.py
backend/app/services/: agent_builder.py  ask_service.py  change_detector.py  context_limits.py  context_overflow.py  export_service.py  health_check.py  import_service.py  incremental_regen.py  incremental_regen_service.py  llm_factory.py  multi_wiki_components.py  project_recompute.py  project_service.py  qa_cache_manager.py  qa_service.py  research_service.py  source_materializer.py  source_scan_service.py  structural_handler_factory.py  toolkit_bridge.py  trivial_patcher.py  wiki_management.py  wiki_service.py  wiki_service_errors.py
backend/app/storage/: __init__.py  base.py  local.py
backend/mcp_server/: __init__.py  server.py
backend/scripts/: export_openapi.py  migrate_wikis_json.py
backend/tests/: conftest.py  test_api_models.py  test_ask_service.py  test_auth.py  test_context_limits.py  test_dependencies.py  test_health_check.py  test_llm_factory.py  test_local_repo.py  test_mcp_server.py  test_openapi.py  test_research_service.py  test_routes_errors.py  test_sse_streaming.py  test_storage.py  test_toolkit_bridge.py  test_wiki_config.py  test_wiki_management.py  test_wiki_refresh.py  test_wiki_service.py  test_wiki_state.py
backend/tests/e2e/: conftest.py  test_auth_service.py  test_error_handling.py  test_happy_path.py
backend/tests/integration/: test_cluster_stability_e2e.py  (+17 more)
(+623 files in other folders)
